did suggested changes minus marker

--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -86,8 +86,6 @@ background-color:{{ page.content_card_color }};
 		</div>
             </div>
 	    <div class="svg-content-holder">
-
-
             </div>
 		<svg  class="mt-3 bottom-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 	  <path fill="{{ page.page_theme_color }}" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
@@ -151,6 +149,17 @@ background-color:{{ page.content_card_color }};
 	       </div>
 	       {% endif %}
 	   {% endfor %}
+
+	    <div class="content-title-holder mt-5">
+                <h2 class="ml-4 mt-4">Near Me</h2>
+	    </div>
+	    <div class="swiper-promotions-desktop mt-5 ml-4">
+		<div class="swiper-wrapper">
+		    {% for page in locationsnearme %}
+			{% include "location_card_desktop.html" with page=page.specific %}
+		    {% endfor %}
+		</div>
+	    </div>
         </div>
 </template>
     <script>
@@ -198,13 +207,8 @@ background-color:{{ page.content_card_color }};
                 el: '.swiper-pagination',
                 clickable: true,
             }
-        
-        
-        
         });
     } else {
-
-
         var desktopTemplate = document.querySelector("#desktop-content");
         var clone = desktopTemplate.content.cloneNode(true);
         pageContentShown.appendChild(clone);
@@ -229,9 +233,7 @@ background-color:{{ page.content_card_color }};
             clickable: true,
           },
         }); 
-
     }
-        
         function setCookie(name, value, seconds) {
             var expires = "";
             if (seconds) {
