--- a/premio_cms/templates/base.html
+++ b/premio_cms/templates/base.html
@@ -36,7 +36,7 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
-        <div class="container">
+        <div class="container no-overflow">
         {% block content %}{% endblock %}
         </div>
 
