--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@300;600&display=swap');
 .no-overflow{
-overflow-x: hidden;
+margin: 0;
+width: 100vw;
 }
+
 @media only screen and (max-width: 844px) {
 .caption-banner {
 z-index:9999;
@@ -64,7 +66,7 @@ margin:0
 }
 
 .rounded-corners {
-border-radius:6%
+border-radius:6%;
 }
 
 .card-img-top {
