--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -162,6 +162,55 @@ background-color:{{ page.content_card_color }};
 	    </div>
         </div>
 </template>
+<template id='mobile-horizontal-content'>
+	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+	  <path fill="{{ page.page_theme_color }}" fill-opacity="1" d="M0,32L120,37.3C240,43,480,53,720,48C960,43,1200,21,1320,10.7L1440,0L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
+	</svg>
+	<svg class="top-svg-desktop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+	  <path fill="#FFFFFF" fill-opacity="0.1" d="M0,32L120,37.3C240,43,480,53,720,48C960,43,1200,21,1320,10.7L1440,0L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
+	</svg>
+        <div class="desktop-locations-holder horizontal">
+	    <div class="content-title-holder">
+	       <h2 class="ml-4 mt-4">Promotions</h2>
+	    </div>
+	    {% if page.promoted_pages.count %}
+	    <div class="swiper-promotions-desktop mt-5 ml-4">
+		<div class="swiper-wrapper"> 
+		    {% for i,p in indexed_promoted_pages %}
+			{% with p.promoted_page.specific as promoted_page %}	
+			    {% include "location_card_horizontal.html" with page=promoted_page %}
+			{% endwith %}
+		    {% endfor %}
+		</div>
+	    </div>
+	   {% endif %}
+	   {% for tag, pages in locationpagetags.items %}
+	       {% if pages.count %}
+	       <div class="content-title-holder mt-5">
+		   <h2 class="ml-4 mt-4">{{ tag | title }}</h2>
+	       </div>
+	       <div class="swiper-promotions-desktop mt-5 ml-4">
+		<div class="swiper-wrapper">
+			{% for child in pages %}
+				{% include "location_card_horizontal.html" with page=child.specific %}
+			{% endfor %}
+		       </div>
+	       </div>
+	       {% endif %}
+	   {% endfor %}
+
+	    <div class="content-title-holder mt-5">
+                <h2 class="ml-4 mt-4">Near Me</h2>
+	    </div>
+	    <div class="swiper-promotions-desktop mt-5 ml-4">
+		<div class="swiper-wrapper">
+		    {% for page in locationsnearme %}
+			{% include "location_card_horizontal.html" with page=page.specific %}
+		    {% endfor %}
+		</div>
+	    </div>
+        </div>
+</template>
     <script>
 
         var devicePortrait=true;
@@ -282,7 +331,7 @@ background-color:{{ page.content_card_color }};
                 devicePortrait = !devicePortrait;
                 if(!devicePortrait) {
                     console.log("landscape");
-			var desktopTemplate = document.querySelector("#desktop-content");
+			var desktopTemplate = document.querySelector("#mobile-horizontal-content");
 			var clone = desktopTemplate.content.cloneNode(true);
 			pageContentShown.appendChild(clone);
 		       var promotionsSwiper = new Swiper('.swiper-promotions-desktop', {
