--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@300;600&display=swap');
+
+
+.container {
+padding:0;
+margin:0;
+max-width: 100vw;
+}
+
 .no-overflow{
 margin: 0;
 width: 100vw;
@@ -61,11 +69,6 @@ width:100vw
 .swiper-location-page-images {
 height:27vh;
 width:100vw
-}
-
-.container {
-padding:0;
-margin:0
 }
 
 .rounded-corners {
@@ -218,10 +221,6 @@ height:27vh;
 width:100vw
 }
 
-.container {
-padding:0;
-margin:0
-}
 
 .rounded-corners {
 border-radius:6%
@@ -426,4 +425,6 @@ position:relative;
 z-index:100000;
 top: -270px;
 }
-
+.container {
+max-width: 100vw;
+}
