--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -433,3 +433,10 @@ max-width: 100vw;
 width: 30vw;
 margin: auto;
 }
+.operating-hours {
+width: 20vw;
+margin: auto;
+}
+.location-title-heading{
+font-size: 60px;
+}
