--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -31,8 +31,9 @@ width: 100%;
        <div class="row">
        <div class="row anm fdr" style="width:90vw;">
            <div class="col">
-               <div class="ml-4">
-                   <h2>{{ page.title }}</h2>
+               <div class="mt-2 ml-4">
+                   <h2><b>{{ page.title }}</b></h2>
+                   <p class="mobile-address-view mt-3"><i>{{ page.address }}</i></p>
                    <div class="page-body mt-2 body-font">
                        {{ page.body|richtext }}
                    </div>
@@ -77,38 +78,41 @@ width: 100%;
                         </div>
                         {% lazy_image page.main_image fill-2000x2000-c100 class="desktop-location-page-img lazy" %}
 
-                        <p class="text-center mt-5 location-title-heading"><b>{{ page.title|richtext }}<b></p>
+                        <p class="text-center mt-5 location-title-heading"><b>{{ page.title|richtext }}</b></p>
                         <h4 class="text-center mt-5">{{ page.intro|richtext}}</h3>
-			<div class="operating-hours mt-5" id="accordion">
-			  <div class="card">
-			    <div class="card-header text-center" id="headingOne">
-			      <h5 class="mb-0">
-				<button class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-				  Operating Hours 
-				<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
-				  <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-				</svg>
+                        {% if page.mon_hours %}
+				<div class="operating-hours mt-5" id="accordion">
+				  <div class="card">
+				    <div class="card-header text-center" id="headingOne">
+				      <h5 class="mb-0">
+					<button class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+					  Operating Hours 
+					<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+					  <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+					</svg>
 
 
-				</button>
-			      </h5>
-			    </div>
+					</button>
+				      </h5>
+				    </div>
 
-			    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-			      <div class="card-body text-center">
-                              <p>
-				      Monday: {{ page.mon_hours|richtext }}<br>
-				      Tuesday: {{ page.tue_hours|richtext }}<br>
-				      Wednesday: {{ page.wed_hours|richtext }}<br>
-				      Thursday: {{ page.thu_hours|richtext }}<br>
-				      Friday: {{ page.fri_hours|richtext }}<br>
-				      Saturday: {{ page.sat_hours|richtext }}<br>
-				      Sunday: {{ page.sun_hours|richtext }}<br>
-                              </p>
-			      </div>
-			    </div>
-			  </div>
-			</div>
+				    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+				      <div class="card-body text-center">
+				      <p><b>
+					      Monday: {{ page.mon_hours|richtext }}<br>
+					      Tuesday: {{ page.tue_hours|richtext }}<br>
+					      Wednesday: {{ page.wed_hours|richtext }}<br>
+					      Thursday: {{ page.thu_hours|richtext }}<br>
+					      Friday: {{ page.fri_hours|richtext }}<br>
+					      Saturday: {{ page.sat_hours|richtext }}<br>
+					      Sunday: {{ page.sun_hours|richtext }}<br>
+                                      
+				      </b></p>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+                        {% endif %}
                         <div class="mt-5 desktop-page-description text-center"><h5>{{ page.body|richtext }}</h5></div>
 		        <div class="shadow-lg mx-auto rounded" style="width: 100vw;">
 		        <div class="mt-5 map" id="map"></div>
