--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -34,7 +34,41 @@ width: 100%;
                <div class="mt-2 ml-4">
                    <h2><b>{{ page.title }}</b></h2>
                    <p class="mobile-address-view mt-3"><i>{{ page.address }}</i></p>
-                   <div class="page-body mt-2 body-font">
+
+                        {% if page.mon_hours %}
+				<div class="operating-hours-mobile" id="accordion">
+				  <div class="card">
+				    <div class="card-header text-center card-header-mobile" id="headingOne">
+				      <h5 class="mb-0">
+					<button style="font-size:12px;" class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+					  Operating Hours 
+					<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+					  <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+					</svg>
+
+
+					</button>
+				      </h5>
+				    </div>
+
+				    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+				      <div class="card-body text-center">
+				      <p><b>
+					      Monday: {{ page.mon_hours|richtext }}<br>
+					      Tuesday: {{ page.tue_hours|richtext }}<br>
+					      Wednesday: {{ page.wed_hours|richtext }}<br>
+					      Thursday: {{ page.thu_hours|richtext }}<br>
+					      Friday: {{ page.fri_hours|richtext }}<br>
+					      Saturday: {{ page.sat_hours|richtext }}<br>
+					      Sunday: {{ page.sun_hours|richtext }}<br>
+                                      
+				      </b></p>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+                        {% endif %}
+                   <div class="page-body mt-4 body-font">
                        {{ page.body|richtext }}
                    </div>
                </div>
@@ -61,6 +95,7 @@ width: 100%;
            </div>
        </div>
        {% endif %}
+
     </template>
     <template id="desktop-content">
 
