--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -169,7 +169,7 @@ background-color:{{ page.content_card_color }};
 	<svg class="top-svg-desktop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 	  <path fill="#FFFFFF" fill-opacity="0.1" d="M0,32L120,37.3C240,43,480,53,720,48C960,43,1200,21,1320,10.7L1440,0L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
 	</svg>
-        <div class="desktop-locations-holder horizontal">
+        <div class="horizontal">
 	    <div class="content-title-holder">
 	       <h2 class="ml-4 mt-4">Promotions</h2>
 	    </div>
