--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -1,12 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@300;600&display=swap');
-
-
 .container {
 padding:0;
 margin:0;
 max-width: 100vw;
 }
-
 .operating-hours-mobile {
 width: 65vw;
 }
@@ -23,6 +20,9 @@ overflow-x: hidden;
 }
 .horizontal {
 margin-top: 130px;
+position: relative;
+top: -400px;
+z-index: 999999999999999999999999999999999999;
 }
 .mobile-address-view {
 font-size: 15px;
