--- a/premio_cms/templates/500.html
+++ b/premio_cms/templates/500.html
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8" />
         <title>Internal server error</title>
